Update fix-scrollbar.css

--- a/src/css/fix-scrollbar.css
+++ b/src/css/fix-scrollbar.css
@@ -4,23 +4,18 @@
     width: 6px;
 }
 
-/* Handle portion of the scrollbar */
 .in-iframe > *::-webkit-scrollbar-thumb {
     background-color: #888;
     border-radius: 6px;
-    border: 2px solid var(--color-background-900);
 }
 
-/* Track (the area on which the handle moves) */
 .in-iframe > *::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
-/* Handle on hover */
 .in-iframe > *::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
-
 
 
 
@@ -36,5 +31,3 @@
     background-clip: content-box;
     background-color: #959595;
 }
-
-
